--- a/templates/index.html
+++ b/templates/index.html
@@ -142,8 +142,9 @@
             <p>Nenhum produto cadastrado.</p>
         {% endif %}
 
-        <p>
-            <a href="{{ url_for('adicionar_produto') }}">Adicionar Novo Produto</a>
+        <p >
+            <a style="background-color:rgb(19, 19, 19);
+            color: white; padding: 10px; text-decoration:none;" href="{{ url_for('adicionar_produto') }}">Adicionar Novo Produto</a>
         </p>
         {% endblock %}
     </div>
